# CcCompare

./: CMakeLists.txt  CcOSImport.cmake  README.md  VERSION.cmake
CMakeConfig/: CcDirectoryExportMacros.cmake  ProjectMacros.cmake
CMakeConfig/InputFiles/: CcDirectoryExportVersion.rc.in  ProjectVersion.rc.in
CcCompare/: CMakeLists.txt  CcCompare.h  CcCompareVersion.rc
CcCompare/src/: CcCompare.cpp  main.cpp
CcDirectoryExport/: CMakeLists.txt  CcDirectoryExport.h  CcDirectoryExportVersion.rc
CcDirectoryExport/src/: CcDirectoryExport.cpp  main.cpp
